--- a/src/unsw/gloriaromanus/basic_menu.fxml
+++ b/src/unsw/gloriaromanus/basic_menu.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -44,7 +43,7 @@
    <HBox prefHeight="52.0" prefWidth="279.0">
       <children>
          <Label text="  BUY :    " />
-         <ChoiceBox fx:id="Infrabuymenu" prefWidth="150.0" />
+         <ComboBox fx:id="Infrabuymenu" prefWidth="150.0" promptText="Select Type" />
          <Button mnemonicParsing="false" onAction="#buyInfraButton" text="Confirm P1" />
          <Button mnemonicParsing="false" onAction="#buyInfraButtonp2" text="Confirm P2" />
       </children>
@@ -52,7 +51,7 @@
    <HBox prefHeight="51.0" prefWidth="279.0">
       <children>
          <Label text="  UPGRADE:  " />
-         <ChoiceBox fx:id="infraupgrademenu" prefWidth="150.0" />
+         <ComboBox fx:id="infraupgrademenu" prefWidth="150.0" promptText="Select type" />
          <Button mnemonicParsing="false" onAction="#upgradeInfraButton" text="Confirm P1" />
          <Button mnemonicParsing="false" onAction="#upgradeInfraButtonp2" text="Confirm P2" />
       </children>
@@ -71,7 +70,7 @@
    <HBox prefHeight="37.0" prefWidth="357.0">
       <children>
          <Label text="  UNIT TYPE:  " />
-         <ChoiceBox fx:id="unitTypeMenu" prefWidth="150.0" />
+         <ComboBox fx:id="unitTypeMenu" prefWidth="150.0" promptText="Select Type" />
          <Button mnemonicParsing="false" onAction="#createUnitButton" text="Confirm P1" />
          <Button mnemonicParsing="false" onAction="#createUnitButtonp2" text="Confirm P2" />
       </children>
@@ -90,14 +89,14 @@
    <HBox prefHeight="52.0" prefWidth="279.0">
       <children>
          <Label text="  BUY (Player 1 Units) :       " />
-         <ComboBox fx:id="trooptype" onAction="#TroopTypesInit" prefWidth="150.0" />
+         <ComboBox fx:id="trooptype" onAction="#TroopTypesInit" prefWidth="150.0" promptText="Select Type" />
          <Button mnemonicParsing="false" onAction="#buyTroopButton" text="Confirm P1" />
       </children>
    </HBox>
    <HBox prefHeight="52.0" prefWidth="279.0">
       <children>
          <Label text="  BUY (Player 2 Units) :       " />
-         <ComboBox fx:id="trooptype1" onAction="#TroopTypesInit1" prefWidth="150.0" />
+         <ComboBox fx:id="trooptype1" onAction="#TroopTypesInit1" prefWidth="150.0" promptText="Select Type" />
          <Button mnemonicParsing="false" onAction="#buyTroopButtonp2" text="Confirm P2" />
       </children>
    </HBox>
